- First item in 'Paste Previous' dialog pre-selected when dialog shown
- Focus is returned to file list in 'Close All' dialog box after one of
  the buttons are clicked
- Recent Directories menu, Browse System/User Macros commands, and other
  commands that open directories in the file system browser now work a
  little better
- The list of open files is now saved by the autosave task
- The 'Shift Indent Right' command now ignores blank lines
- Smoother incremental search
- When HOME is pressed while there is a selection, the caret is moved to
  the beginning of the first selected line. END moves the caret to the
  end of the last selected line.
- Search bar automatically selects its contents as soon as it gets focus
- The file system browser's 'Search in Directory' command no longer
  hangs the event dispatch thread until the directory hierarchy has been
  listed
- If an error occurs while loading one of the files involved in a
  multi-file search, the search will continue; previously it would have
  been aborted. Any errors will be listed in a dialog box after the
  search is complete.
- Commands in View->Splitting menu moved to top level of View menu

+ Neutral

- Syntax highlighting can no longer be disabled -- too many features
  (bracket matching, commenting commands) rely on syntax info now

+ Bug Fixes

- JEditTextArea now uses type-safe buffer property accessors, so there
  shouldn't be any more ClassCastExceptions
- Fixed stack overflow if attempting to use URL filesystem (to open an
  http:// URL, for instance)
- Fixed stupid bug in installer that affected MacOS X installation
- File system browser's parent directory view could not be completely
  hidden by dragging the split pane
- Pressing the left arrow key in the file system browser didn't always
  work
- Bracket matching would sometimes show a status bar message even if the
  bracket was visible
- Fixed another minor bracket repaint problem that would occur if the