@@ -2,22 +2,50 @@
 
 <!DOCTYPE MODE SYSTEM "xmode.dtd">
 
+<!-- 	
+	Compiled by Mirco Bova on 04-12-2001 
+	this file is based on the original JEdit batch.xml mode.
+	The main upgrade consisting in adding the standard MS-DOS
+	commands as keywords and functions:
+	- keywords =		internal shell commands;
+	-	functions =		standard MS-DOS commands (.exe or .com in DOS or
+									windows\command directory).
+-->
+
+<!-- The keywords and functions here defined are those of MS-DOS 6.22 -->
+
 <MODE>
 	<PROPS>
 		<PROPERTY NAME="lineComment" VALUE="rem " />
 	</PROPS>
-	<RULES ESCAPE="\" IGNORE_CASE="TRUE">
+	<RULES ESCAPE="\" IGNORE_CASE="TRUE" HIGHLIGHT_DIGITS="FALSE">
 		<WHITESPACE> </WHITESPACE>
 		<WHITESPACE>	</WHITESPACE>
 
 		<!-- 'echo off' statements -->
 		<SEQ TYPE="KEYWORD3">@</SEQ>
 
+		<SEQ TYPE="OPERATOR">+</SEQ>
+		<SEQ TYPE="OPERATOR">|</SEQ>
+		<SEQ TYPE="OPERATOR">&amp;</SEQ>
+		<SEQ TYPE="OPERATOR">!</SEQ>
+		<SEQ TYPE="OPERATOR">&gt;</SEQ>
+		<SEQ TYPE="OPERATOR">&lt;</SEQ>
+
+		<SEQ TYPE="NULL">(</SEQ>
+		<SEQ TYPE="NULL">)</SEQ>
+		<SEQ TYPE="NULL">=</SEQ>
+		<SEQ TYPE="NULL">.</SEQ>
+		<SEQ TYPE="NULL">,</SEQ>
+		<SEQ TYPE="NULL">;</SEQ>
+		<SEQ TYPE="NULL">]</SEQ>
+		<SEQ TYPE="NULL">[</SEQ>
+
 		<!-- labels -- eg :test -->
 		<EOL_SPAN TYPE="LABEL" AT_LINE_START="TRUE">:</EOL_SPAN>
 
 		<!-- comments -->
-		<EOL_SPAN TYPE="COMMENT1">REM </EOL_SPAN>
+		<EOL_SPAN TYPE="COMMENT1">REM</EOL_SPAN>
 
 		<!-- literals -->
 		<SPAN TYPE="LITERAL1" NO_LINE_BREAK="TRUE">
@@ -25,6 +53,82 @@
 			<END>"</END>
 		</SPAN>
 
+		<KEYWORDS IGNORE_CASE="TRUE">
+				<!-- KEYWORD1 are internal MS-DOS shell commands -->
+				<KEYWORD1>cd</KEYWORD1>
+				<KEYWORD1>chdir</KEYWORD1>
+				<KEYWORD1>md</KEYWORD1>
+				<KEYWORD1>mkdir</KEYWORD1>
+		
+				<KEYWORD1>cls</KEYWORD1>
+		
+				<KEYWORD1>if</KEYWORD1>
+		
+				<KEYWORD1>echo</KEYWORD1>
+				<KEYWORD1>echo.</KEYWORD1>
+		
+				<KEYWORD1>move</KEYWORD1>
+				<KEYWORD1>copy</KEYWORD1>
+				<KEYWORD1>move</KEYWORD1>
+				<KEYWORD1>ren</KEYWORD1>
+				<KEYWORD1>del</KEYWORD1>
+				<KEYWORD1>set</KEYWORD1>
+		
+				<!-- KEYWORD2 are commands options -->
+		
+				<KEYWORD2>exist</KEYWORD2>
+				<KEYWORD2>errorlevel</KEYWORD2>
+				<KEYWORD1>not</KEYWORD1>
+		
+				<!-- goto is a special case we want to distinguish it -->
+				<KEYWORD3>goto</KEYWORD3>
+
+				<!-- FUNCTION are standard MS-DOS commands -->
+				<!-- (those you find as stand-alone .exe or .com) in win95 %windows_root%\command folder -->
+				<FUNCTION>APPEND</FUNCTION>
+				<FUNCTION>ATTRIB</FUNCTION>
+				<FUNCTION>CHKDSK</FUNCTION>
+				<FUNCTION>CHOICE</FUNCTION>
+				<FUNCTION>DEBUG</FUNCTION>
+				<FUNCTION>DEFRAG</FUNCTION>
+				<FUNCTION>DELTREE</FUNCTION>
+				<FUNCTION>DISKCOMP</FUNCTION>
+				<FUNCTION>DISKCOPY</FUNCTION>
+				<FUNCTION>DOSKEY</FUNCTION>
+				<FUNCTION>DRVSPACE</FUNCTION>
+				<FUNCTION>EMM386</FUNCTION>
+				<FUNCTION>EXPAND</FUNCTION>
+				<FUNCTION>FASTOPEN</FUNCTION>
+				<FUNCTION>FC</FUNCTION>
+				<FUNCTION>FDISK</FUNCTION>
+				<FUNCTION>FIND</FUNCTION>
+				<FUNCTION>FORMAT</FUNCTION>
+				<FUNCTION>GRAPHICS</FUNCTION>
+				<FUNCTION>KEYB</FUNCTION>
+				<FUNCTION>LABEL</FUNCTION>
+				<FUNCTION>LOADFIX</FUNCTION>
+				<FUNCTION>MEM</FUNCTION>
+				<FUNCTION>MODE</FUNCTION>
+				<FUNCTION>MORE</FUNCTION>
+				<FUNCTION>MOVE</FUNCTION>
+				<FUNCTION>MSCDEX</FUNCTION>
+				<FUNCTION>NLSFUNC</FUNCTION>
+				<FUNCTION>POWER</FUNCTION>
+				<FUNCTION>PRINT</FUNCTION>
+				<FUNCTION>REPLACE</FUNCTION>
+				<FUNCTION>RESTORE</FUNCTION>
+				<FUNCTION>SETVER</FUNCTION>
+				<FUNCTION>SHARE</FUNCTION>
+				<FUNCTION>SORT</FUNCTION>
+				<FUNCTION>SUBST</FUNCTION>
+				<FUNCTION>SYS</FUNCTION>
+				<FUNCTION>TREE</FUNCTION>
+				<FUNCTION>UNDELETE</FUNCTION>
+				<FUNCTION>UNFORMAT</FUNCTION>
+				<FUNCTION>VSAFE</FUNCTION>
+				<FUNCTION>XCOPY</FUNCTION>
+		</KEYWORDS>
+		
 		<!-- variables -->
 		<SEQ TYPE="KEYWORD2">%1</SEQ>
 		<SEQ TYPE="KEYWORD2">%2</SEQ>
@@ -35,7 +139,6 @@
 		<SEQ TYPE="KEYWORD2">%7</SEQ>
 		<SEQ TYPE="KEYWORD2">%8</SEQ>
 		<SEQ TYPE="KEYWORD2">%9</SEQ>
-		<SEQ TYPE="KEYWORD2">%*</SEQ>
 		<SPAN TYPE="KEYWORD2" NO_LINE_BREAK="TRUE">
 			<BEGIN>%</BEGIN>
 			<END>%</END>
